--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -2939,7 +2939,7 @@ In dit scenario clusteren we waarnemingen tot broedparen met **territoria**. Daa
 
 ### Data voorbereiden
 
-In de output van **territoria** krijgen we de centroide van de clusters (gemiddelde coordinaten van waarnemingen per cluster). Om niet te veel te moeten joinen berekenen we deze coordinaten opnieuw met de **sf** package. We maken een kolom `Sample.Label` met de het id van de plot, `size` is het aantal broedparen per cluster (overal 1), `regio`, `sbp` en `openheid` zijn covariaten, `Effort` is het aantal keer dat een plot is bezocht (overal 1). `Region.Label` is een label voor elke regio (zelfde als `regio`-kolom).
+In de output van **territoria** krijgen we de centroide van de clusters (gemiddelde coordinaten van waarnemingen per cluster). Om niet te veel te moeten joinen berekenen we deze coordinaten opnieuw met de **sf** package. We maken een kolom `Sample.Label` met de het id van de plot, `size` is het aantal broedparen per cluster (overal 1), `regio`, `sbp` en `openheid` zijn covariaten en `Region.Label` is een label voor elke regio (zelfde als `regio`-kolom). We hebben ook een dataframe die we als optie `region_table` meegeven met `Region.Label` en `Area` en een dataframe die we als optie `sample_table` meegeven met `Sample.Label`, `Region.Label` en `Effort`. `Effort` is het aantal keer dat een plot is bezocht (overal 1). Deze laatste tabel bevat alle plotnamen, ook deze waar geen Gele kwikstaart werd gezien.
 
 ```{r}
 # Voeg clusters toe aan presence data
@@ -2976,13 +2976,14 @@ df_dist_terr_presence2 <- left_join(df_dist_terr_presence %>% as.data.frame(),
   rename(geometry = geometry.x) %>%
   st_sf(sf_column_name = "geometry")
 
-# Voeg regio label en sampling effort toe
+# Voeg regio label toe
 df_dist_terr <- df_dist_terr_presence2 %>%
-  mutate(Region.Label = regio,
-         Effort = 1)
+  mutate(Region.Label = regio)
 
-# Eerste tien rijen van dataset
-df_dist_terr
+
+# Sample table
+samp_table2 <- samp_table %>%
+  mutate(Effort  = 1)
 ```
 
 
@@ -3194,7 +3195,8 @@ $$
 ```{r}
 ds_scen1_unif1 <- ds(data = df_dist_terr, key = "unif", truncation = 300, 
                      transect = "point", dht_group = FALSE,
-                     convert_units = conversion_factor)
+                     convert_units = conversion_factor,
+                     region_table = reg_table, sample_table = samp_table2)
 ```
 
 - Fitting half-normal key function
@@ -3212,58 +3214,70 @@ $$
 # Null model
 ds_scen1_hn1 <- ds(data = df_dist_terr, key = "hn", truncation = 300, 
                    transect = "point", dht_group = FALSE,
-                   convert_units = conversion_factor)
+                   convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 # Single covariate
 ds_scen1_hn2 <- ds(data = df_dist_terr, key = "hn", formula = ~ regio,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hn3 <- ds(data = df_dist_terr, key = "hn", formula = ~ sbp,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hn4 <- ds(data = df_dist_terr, key = "hn", formula = ~ openheid,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 # Combination of covariates
 ds_scen1_hn5 <- ds(data = df_dist_terr, key = "hn", formula = ~ regio + sbp,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hn6 <- ds(data = df_dist_terr, key = "hn", 
                    formula = ~ regio + openheid,
                  adjustment = NULL, truncation = 300, transect = "point", 
-                 dht_group = FALSE, convert_units = conversion_factor)
+                 dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hn7 <- ds(data = df_dist_terr, key = "hn", formula = ~ sbp + openheid,
                  adjustment = NULL, truncation = 300, transect = "point", 
-                 dht_group = FALSE, convert_units = conversion_factor)
+                 dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hn8 <- ds(data = df_dist_terr, key = "hn", 
                    formula = ~ regio + sbp + openheid,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 # Interactions between covariates
 ds_scen1_hn9 <- ds(data = df_dist_terr, key = "hn", formula = ~ regio * sbp,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hn10 <- ds(data = df_dist_terr, key = "hn", formula = ~ sbp * openheid,
                     adjustment = NULL, truncation = 300, transect = "point", 
-                    dht_group = FALSE, convert_units = conversion_factor)
+                    dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hn11 <- ds(data = df_dist_terr, key = "hn", 
                     formula = ~ regio + sbp * openheid,
                     adjustment = NULL, truncation = 300, transect = "point", 
-                    dht_group = FALSE, convert_units = conversion_factor)
+                    dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hn12 <- ds(data = df_dist_terr, key = "hn", 
                     formula = ~ regio * sbp + openheid,
                     adjustment = NULL, truncation = 300, transect = "point", 
-                    dht_group = FALSE, convert_units = conversion_factor)
+                    dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 ```
 
 - Fitting hazard-rate key function
@@ -3281,58 +3295,70 @@ $$
 # Null model
 ds_scen1_hr1 <- ds(data = df_dist_terr, key = "hr", truncation = 300, 
                    transect = "point", dht_group = FALSE,
-                   convert_units = conversion_factor)
+                   convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 # Single covariate
 ds_scen1_hr2 <- ds(data = df_dist_terr, key = "hr", formula = ~ regio,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hr3 <- ds(data = df_dist_terr, key = "hr", formula = ~ sbp,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hr4 <- ds(data = df_dist_terr, key = "hr", formula = ~ openheid,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 # Combination of covariates
 ds_scen1_hr5 <- ds(data = df_dist_terr, key = "hr", formula = ~ regio + sbp,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hr6 <- ds(data = df_dist_terr, key = "hr", 
                    formula = ~ regio + openheid,
                  adjustment = NULL, truncation = 300, transect = "point", 
-                 dht_group = FALSE, convert_units = conversion_factor)
+                 dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hr7 <- ds(data = df_dist_terr, key = "hr", formula = ~ sbp + openheid,
                  adjustment = NULL, truncation = 300, transect = "point", 
-                 dht_group = FALSE, convert_units = conversion_factor)
+                 dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hr8 <- ds(data = df_dist_terr, key = "hr", 
                    formula = ~ regio + sbp + openheid,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 # Interactions between covariates
 ds_scen1_hr9 <- ds(data = df_dist_terr, key = "hr", formula = ~ regio * sbp,
                    adjustment = NULL, truncation = 300, transect = "point", 
-                   dht_group = FALSE, convert_units = conversion_factor)
+                   dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hr10 <- ds(data = df_dist_terr, key = "hr", formula = ~ sbp * openheid,
                     adjustment = NULL, truncation = 300, transect = "point", 
-                    dht_group = FALSE, convert_units = conversion_factor)
+                    dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hr11 <- ds(data = df_dist_terr, key = "hr", 
                     formula = ~ regio + sbp * openheid,
                     adjustment = NULL, truncation = 300, transect = "point", 
-                    dht_group = FALSE, convert_units = conversion_factor)
+                    dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 
 ds_scen1_hr12 <- ds(data = df_dist_terr, key = "hr", 
                     formula = ~ regio * sbp + openheid,
                     adjustment = NULL, truncation = 300, transect = "point", 
-                    dht_group = FALSE, convert_units = conversion_factor)
+                    dht_group = FALSE, convert_units = conversion_factor,
+                   region_table = reg_table, sample_table = samp_table2)
 ```
 
 We vergelijken de AIC van de verschillende modellen. Als het verschil tussen AIC’s kleiner is dan 2, kiezen we het eenvoudigste van deze modellen. Modellen met vergelijkbare AIC’s hebben vergelijkbare geschatte detectiekansen, dus in de praktijk is er weinig verschil in de keuze tussen deze modellen.
