adjust code found in url to our data

--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -3519,6 +3519,117 @@ par(mfrow = c(1, 1))
 Lukt niet om te repliceren in met `ggplot()`. Herschaling onduidelijk. Deze link geeft mogelijks een relatief eenvoudige oplossing:  
 https://groups.google.com/g/distance-sampling/c/Xf9KnmPdXuo/m/7PhjBe3YAAAJ
 
+```{r}
+dist.data <- df_dist_terr
+model <- ds_scen1_hr5
+
+# Scaling factor needed for correct plotting
+# From mrds:::scalevalue
+scale.value <- function(key.scale, z) {
+  return(exp(as.matrix(z) %*% key.scale))
+  }
+
+# This function calculates the detection probability according to a hazard rate model
+# from mrds:::keyfct.hz
+key.fct.hz <- function(distance, key.scale, key.shape) {
+  return(1 - exp(-(distance/key.scale)^(-key.shape)))
+  }
+
+# This function calculates the detection probability according to a hazard rate model
+# from mrds:::keyfct.hn
+key.fct.hn <- function(distance, key.scale) {
+  return(exp( -(( distance / (sqrt(2) * key.scale) )^2) ))
+}
+
+# Vector of distances used to re-create the detection function (from 0 out to truncation distance of 300 m)
+distances <- seq(0 ,300, length.out = 100)
+
+# Using a hazard-rate model with two (dichotomous, 1/0) factor variables that only affects the scale
+# (not the shape) of the detection function:
+
+# Shape parameter
+key.shape <- scale.value(model$ddf$ds$aux$ddfobj$shape$parameters, 
+                         matrix(1, nrow = 100, 1))
+
+# Scale parameter
+# Factor = 0: De Moeren - binnen
+mat0 <- matrix(1, nrow = 100, ncol = 3)
+mat0[, 2:3] <- 0
+key.scale0 <- scale.value(model$ddf$ds$aux$ddfobj$scale$parameters, mat0)
+
+# Factor = 1: De Moeren - buiten
+mat1 <- matrix(1, nrow = 100, ncol = 3)
+mat1[, 2] <- 0
+key.scale1 <- scale.value(model$ddf$ds$aux$ddfobj$scale$parameters, mat1)
+
+# Factor = 2: Oostelijke leemstreek - binnen
+mat2 <- matrix(1, nrow = 100, ncol = 3)
+mat2[, 3] <- 0
+key.scale2 <- scale.value(model$ddf$ds$aux$ddfobj$scale$parameters, mat2)
+
+# Factor = 3: Oostelijke leemstreek - buiten
+mat3 <- matrix(1, nrow = 100, ncol = 3)
+key.scale3 <- scale.value(model$ddf$ds$aux$ddfobj$scale$parameters, mat3)
+
+# Calculate detection probability values
+y.val0 <- key.fct.hz(distances, key.scale0, key.shape)
+y.val1 <- key.fct.hz(distances, key.scale1, key.shape)
+y.val2 <- key.fct.hz(distances, key.scale2, key.shape)
+y.val3 <- key.fct.hz(distances, key.scale3, key.shape)
+
+# Now let's re-create the histogram
+# from mrds:::detfct
+bindata <- function(x, r, breaks) {
+  return(hist(r[r >= x[1] & r <= x[2]], breaks = breaks, plot = FALSE)$counts)
+  }
+sumit <- function(x, n, wt) {
+  return(sum(x/(wt * n)))
+  }
+selected <- rep(TRUE, nrow(model$ddf$ds$aux$ddfobj$xmat))
+
+# Detection probability for each fitted value & Nhat estimate
+if (length(model$ddf$fitted) == 1) {
+  pdot <- rep(model$ddf$fitted, sum(as.numeric(selected)))
+} else {
+  pdot <- model$ddf$fitted[selected]
+  Nhat <- sum(1 / pdot)
+}
+
+# Create a dummy histogram (h1)
+# dist.data is the data.frame object of the distance data
+# Right-truncating here at 300 m
+# If you inspect the internal functions of the mrds package, you will find how the number of histogram breaks is calculated. In my case, the value is 15
+h1 <- hist(dist.data[dist.data$distance <= 300,]$distance, 
+           breaks = seq(0, 300, 300 / 15))
+
+# Calculate expected counts for each distance value
+expected.counts <- apply(t(as.matrix(c(0,300))), 1, bindata, 
+                         r = (0:1000) * 300 / 1001,
+                         breaks = seq(0, 300, 300/ 15))
+expected.counts <- apply(expected.counts, 1, sumit, n = 1001, wt = pdot)
+
+# Re-scale the counts
+h1$counts <- h1$counts / expected.counts
+
+# Use the ggplot2 package to plot the histogram (as rectangles) and overlay the detection function
+x <- h1$breaks
+
+ggplot() + 
+  geom_rect(aes(xmin = x[1:length(x)-1], xmax = x[2:length(x)], 
+                ymin = rep(0,length(x)-1), ymax = h1$counts), 
+            fill="white", color="black") + 
+  geom_line(data = data.frame(x = distances, y = y.val0), 
+            aes(x = x, y = y), colour = "blue") + # Factor level 0
+  geom_line(data = data.frame(x = distances, y = y.val1), 
+            aes(x = x, y = y), colour = "darkgreen") + # Factor level 1
+  geom_line(data = data.frame(x = distances, y = y.val2), 
+            aes(x = x, y = y), colour = "brown")+ # Factor level 2
+  geom_line(data = data.frame(x = distances, y = y.val3), 
+            aes(x = x, y = y), , colour = "salmon") + # Factor level 3
+  xlab("Distance (m)") +
+  ylab("Detection probability")
+```
+
 
 ### Resultaten en visualisatie
 
